content spacing now correct

--- a/client/css/reset.css
+++ b/client/css/reset.css
@@ -57,3 +57,4 @@ table {
 	max-width: 100%;
 
 }
+body { padding-top: 80px; }
